--- a/Jenkins/jenkins-values.yaml
+++ b/Jenkins/jenkins-values.yaml
@@ -39,7 +39,7 @@ controller:
     repository: "shriharisbhat/groot-jenkins"
 
     # -- Controller image tag override; i.e., tag: "2.440.1-jdk17"
-    tag: 2.0.0
+    tag: 3.0.0
 
     # -- Controller image tag label
     tagLabel: jdk17
@@ -1210,7 +1210,7 @@ additionalClouds: {}
 
 persistence:
   # -- Enable the use of a Jenkins PVC
-  enabled: true
+  enabled: false
 
   # A manually managed Persistent Volume and Claim
   # Requires persistence.enabled: true
