--- a/Jenkins/jenkins-casc-configs/seed-job-config.yaml
+++ b/Jenkins/jenkins-casc-configs/seed-job-config.yaml
@@ -17,7 +17,7 @@ jobs:
             removedConfigFilesAction('DELETE')
           }
         }
-        triggers {
-          scm('H/15 * * * *')  // Optional: Trigger every 15 minutes on SCM change
-        }
+        # triggers {
+        #   scm('H/15 * * * *')  // Optional: Trigger every 15 minutes on SCM change
+        # }
       }
